# adit

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
assets/: make_icon.py
crates/adit-app/: Cargo.toml  build.rs
crates/adit-app/src/: main.rs
crates/adit-domain/: Cargo.toml
crates/adit-domain/src/: lib.rs
crates/adit-installer/: Cargo.toml  build.rs
crates/adit-installer/src/: main.rs
crates/adit-rdp/: Cargo.toml  IRONRDP-PATCHES.md
crates/adit-rdp-proto/: Cargo.toml
crates/adit-rdp-proto/src/: lib.rs
crates/adit-rdp-proto/tests/: debug_connect.rs  helper_ipc.rs
crates/adit-rdp/src/: egfx.rs  host.rs  input.rs  lib.rs  main.rs  rdstls.rs  redirect.rs  session.rs
crates/adit-session/: Cargo.toml
crates/adit-session/src/: lib.rs  rdp_client.rs  sftp_shell.rs
crates/adit-ssh/: Cargo.toml
crates/adit-ssh/src/: lib.rs
crates/adit-ssh/tests/: integration.rs
crates/adit-storage/: Cargo.toml
crates/adit-storage/src/: credentials.rs  lib.rs
crates/adit-terminal/: Cargo.toml
crates/adit-terminal/src/: lib.rs  vt.rs
crates/adit-ui/: Cargo.toml
crates/adit-ui/assets/: icon.rgba
crates/adit-ui/src/: lib.rs
docker/test-sshd/: Dockerfile  sshd_config
docs/: architecture.md  decisions.md  feature-roadmap.md  features.md  native-rust-architecture.md  phase2-plan.md  rdp-gnome-remote-desktop.md
installer/: adit.iss
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
