[workspace]
members = [
    "crates/adit-app",
    "crates/adit-domain",
    "crates/adit-session",
    "crates/adit-ssh",
    "crates/adit-storage",
    "crates/adit-terminal",
    "crates/adit-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.21"
edition = "2021"
authors = ["Adit"]
license = "MIT"

[workspace.dependencies]
adit-domain = { path = "crates/adit-domain" }
adit-session = { path = "crates/adit-session" }
adit-ssh = { path = "crates/adit-ssh" }
adit-storage = { path = "crates/adit-storage" }
adit-terminal = { path = "crates/adit-terminal" }
adit-ui = { path = "crates/adit-ui" }
bytes = "1"
iced = { version = "0.14.0", default-features = true, features = ["tokio", "advanced"] }
keyring = "4.1.2"
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "net"] }
uuid = { version = "1", features = ["serde", "v4"] }
