[package]
name = "adit-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adit-ui.workspace = true
iced.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
