[package]
name = "adit-rdp-proto"
# (kept in lockstep with the workspace version manually — see release process)
# Concrete metadata (not workspace-inherited): this crate is a member of the main
# workspace but is ALSO a path dependency of the standalone `adit-rdp` workspace,
# so it must resolve without depending on either workspace's inheritance.
version = "0.1.56"
edition = "2021"
authors = ["Adit"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
