[package]
name = "adit-rdp"
version = "0.1.45"
edition = "2021"
authors = ["Adit"]
license = "MIT"

# Standalone workspace: adit-rdp is deliberately excluded from the main Adit
# workspace because the IronRDP stack's `picky` crate exact-pins pre-release
# RustCrypto versions that conflict with russh's. Keeping a separate Cargo.lock
# lets IronRDP and russh each resolve their own crypto deps. adit-rdp ships as a
# helper process the main app drives over IPC.
[workspace]

[lib]
name = "adit_rdp"
path = "src/lib.rs"

# The helper executable the main app spawns and drives over stdin/stdout.
[[bin]]
name = "adit-rdp-host"
path = "src/main.rs"

[features]
# Core (connect + render + input + resize) ships by default. Clipboard and audio
# are opt-in while they're brought up: `clipboard` needs Windows message-pump
# wiring; `sound` pulls native Opus (libopus_sys) which needs a CMake toolchain.
default = []
# Bidirectional clipboard (CLIPRDR). Pulls in the native OS clipboard backend.
clipboard = ["dep:ironrdp-cliprdr", "dep:ironrdp-cliprdr-native"]
# Server audio playback (RDPSND) through cpal.
sound = ["dep:ironrdp-rdpsnd", "dep:ironrdp-rdpsnd-native"]

[dependencies]
adit-rdp-proto = { path = "../adit-rdp-proto" }
# IronRDP protocol stack (pinned to the published crates.io releases).
ironrdp-core = { version = "0.2", features = ["alloc"] }
ironrdp-pdu = "0.9"
ironrdp-svc = "0.8"
ironrdp-dvc = "0.8"
ironrdp-connector = "0.10"
ironrdp-session = "0.11"
ironrdp-graphics = "0.9"
ironrdp-input = "0.7"
ironrdp-displaycontrol = "0.8"
ironrdp-egfx = "0.3"
ironrdp-async = "0.10"
ironrdp-tokio = { version = "0.10", features = ["reqwest"] }
ironrdp-tls = { version = "0.2", features = ["rustls"] }
ironrdp-cliprdr = { version = "0.7", optional = true }
ironrdp-cliprdr-native = { version = "0.7", optional = true }
ironrdp-rdpsnd = { version = "0.9", optional = true }
ironrdp-rdpsnd-native = { version = "0.7", optional = true }

sspi = "0.21"
smallvec = "1.15"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "macros"] }
tracing = "0.1"
# Diagnostics go to STDERR only (stdout is the binary protocol). Off unless
# RUST_LOG is set, so normal runs stay silent.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vendored + patched ironrdp-connector (crates.io 0.10.0 + three marked hunks):
# RDSTLS on the GNOME handover redirect, EGFX capability advertisement, and
# dropping the MCS message channel to dodge a connect-time deadlock. Byte-for-byte
# identical to upstream otherwise. Full rationale + re-vendoring steps in
# IRONRDP-PATCHES.md; each hunk is tagged `ADIT PATCH` in
# vendor/ironrdp-connector/src/connection.rs.
[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }
