[package]
name = "adit-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adit-domain.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
hex.workspace = true
zeroize.workspace = true
