[package]
name = "adit-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adit-domain.workspace = true
adit-session.workspace = true
adit-storage.workspace = true
adit-terminal.workspace = true
iced.workspace = true
rfd = "0.15"
time = { version = "0.3", features = ["local-offset"] }
